<resources>
    <string name="app_name">CourseMate</string>
    <string name="title_favorites">Saved Courses</string>
    <string name="title_home">Dashboard</string>
    <string name="title_settings">Settings</string>


    <string name="extended_fab_label">CourseMate Chatbot</string>
    <!--untuk item row classic-->
    <string name="cJudulCourse">judul course</string>
    <string name="cDeskripsiCourse">Deskripse course</string>
    <string name="cEnrollButt">ENROLL</string>

    <!--ITEM ROW FAVOURITE-->
    <string name="tvfTitle">Course name</string>
    <string name="tvfCat">Category</string>
    <string name="tvfInterest">Interest</string>
    <string name="btnfDetail">Website</string>


<!--UNTUK PREF FORM-->
    <string-array name="interest_options">
        <item>Select Your Interest</item>
        <item>Algorithms</item>
        <item>Animal Health</item>
        <item>Basic Science</item>
        <item>Business Essentials</item>
        <item>Business Strategy</item>
        <item>Chemistry</item>
        <item>Cloud Computing</item>
        <item>Computer Security and Networks</item>
        <item>Data Analysis</item>
        <item>Data Management</item>
        <item>Design and Product</item>
        <item>Electrical Engineering</item>
        <item>Entrepreneurship</item>
        <item>Finance</item>
        <item>Health Informatics</item>
        <item>Healthcare Management</item>
        <item>History</item>

    </string-array>

    <string-array name="course_type_options">
        <item>Select Course Type</item>
        <item>Course</item>
        <item>Specialization</item>
        <item>Professional Certificate</item>
        <item>Project</item>
    </string-array>

    <string-array name="duration_options">
        <item>Select Max Duration (In Weeks)</item>
        <item>4</item>
        <item>8</item>
        <item>16</item>
        <item>32</item>
    </string-array>

    <!--FORM LOGIN-->
    <string name="login_title">LOGIN</string>
    <string name="username_label">Username</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_label">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="register_text">Don\'t have an account? Sign up here!</string>

    <!--FORM PREFERENCE-->
    <string name="preference_title">PREFERENCE FORM</string>
    <string name="topic_label">Tell us your topic of interest</string>
    <string name="course_type_label">What course type would you like to take?</string>
    <string name="course_duration_label">How long would you prefer the course duration to be?</string>
    <string name="note_text">*You can change your preference later.</string>
    <string name="save_preference_button">SAVE PREFERENCE</string>

    <!--FORM REGISTER-->
    <string name="register_title">REGISTER</string>
    <string name="fullname_label">Fullname</string>
    <string name="fullname_hint">Enter your fullname</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="register_button">REGISTER</string>

    <!--FRAGMENT HOME-->
    <string name="predicted_category">Predicted Category: N/A</string>
    <string name="recommendation_courses">Recommendation Courses</string>
    <string name="preference_test">Preference Test</string>
    <string name="no_preference_data">You do not have any preference data yet. Tap here to fill the form.</string>
    <string name="title_activity_update_form">UpdateFormActivity</string>

    <!--FRAGMENT SETTINGS-->
    <string name="aTitle">Account Settings</string>
    <string name="sTitle">App Settings</string>

    <string name="aUsername">Username</string>
    <string name="aP"> | </string>
    <string name="aFullname">Fullname</string>
    <string name="aEmail">your email</string>
    <string name="aCardHint">Logged in as:</string>

    <string name="aUpdate">Update Account</string>
    <string name="aLogout">Logout</string>
    <string name="aPutSync">Save Data to Cloud</string>
    <string name="aGetSync">Sync Data from Cloud</string>

<string name="sDarkTheme">Turn on dark theme for this app</string>



<!--    <string name=""></string>-->

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>