<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Account Settings Title -->
            <TextView
                android:id="@+id/accountSettingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/aTitle"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Login Status Header -->

            <!-- App Settings Title -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="149dp"
                app:cardCornerRadius="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/ivpProfilePicture"
                        android:layout_width="105dp"
                        android:layout_height="105dp"
                        android:layout_marginStart="16dp"
                        app:circularflow_radiusInDP="32dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.477"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tvpUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="40dp"
                        android:text="@string/aUsername"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/ivpProfilePicture"
                        app:layout_constraintTop_toTopOf="@+id/ivpProfilePicture" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/aP"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/tvpUsername"
                        app:layout_constraintTop_toTopOf="@+id/tvpUsername" />

                    <TextView
                        android:id="@+id/tvpFullname"
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/aFullname"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/textView5"
                        app:layout_constraintTop_toTopOf="@+id/textView5" />

                    <TextView
                        android:id="@+id/tvpEmail"
                        android:layout_width="224dp"
                        android:layout_height="23dp"
                        android:text="@string/aEmail"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        app:layout_constraintStart_toStartOf="@+id/tvpUsername"
                        app:layout_constraintTop_toBottomOf="@+id/tvpUsername" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="182dp"
                        android:layout_height="28dp"
                        android:text="@string/aCardHint"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/tvpUsername"
                        app:layout_constraintTop_toTopOf="@+id/ivpProfilePicture" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnUpdateProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/aUpdate"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/aLogout"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/syncFromCloudButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:text="@string/aGetSync"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:visibility="gone" />

            <Button
                android:id="@+id/saveToCloudButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:text="@string/aPutSync"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/appSettingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/sTitle"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_theme"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                android:text="@string/sDarkTheme"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>